# DSA-From-Scratch

./: .gitignore  .gitmodules  .tokeignore  .zipignore  CMakeLists.txt  Makefile
src/: playground.c
src/Array/: CMakeLists.txt
src/Array/benchmark/: DoublyLinkedList_get_bench.cpp  LinkedList_remove_last_bench.cpp
src/Array/include/Array/: ArrayList.h  DoublyLinkedList.h  LinkedList.h
src/Array/src/: ArrayList.c  DoubleLinkedList.c  DoublyLinkedList.c  LinkedList.c
src/Array/tests/: ArrayList_tests.cpp  DoublyLinkedList_tests.cpp  LinkedList_tests.cpp
src/Stack/: CMakeLists.txt
src/Stack/include/Stack/: LinkedStack.h
src/Stack/src/: LinkedStack.c
src/Stack/tests/: LinkedStack_tests.cpp
src/Tree/: CMakeLists.txt
src/Tree/include/Tree/: BinaryTree.h
src/Tree/src/: BinaryTree.c
src/Tree/tests/: BSTree_tests.cpp
src/Types/: CMakeLists.txt
src/Types/include/Types/: Integer.h
src/Types/src/: Integer.c
